--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
                 <div class="container">
                     <div class="introduction">
-                        <h1 class="introduction1"><span class="span1">Empowering</span>
+                        <h1 class="introduction1" id="p1"><span class="span1">Empowering</span>
                             students from small age <span class="span2">towards vision</span></h1>
-                        <p class="introduction2">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                        <p class="introduction2" id="p2" >With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
                         <button class="btn-2">Enroll Now</button>
                     </div class="kids_image">
                           <img src="assets/hero-kids.png" alt="">
