--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             </header>          
             
-            <body>
+            <body >
                     <section class="section1">
                         <div>
                             <div class="Standard">
@@ -165,7 +165,9 @@
 
                         </div>
 
-                        <button class="btn-5">View All</button>
+                        <div class="btn">
+                            <button class="btn-5" id="b">View All</button>
+                        </div>
 
 
                     </section>
